# update-server/src/update.rs
@@ -1,8 +1,9 @@
 use std::fs;
 use std::path::Path;
 use actix_web::{get, HttpRequest, HttpResponse};
+use actix_web::http::header::ContentType;
+use urlencoding::decode;
 use semver::{Version, VersionReq};
-use crate::news::News;
 use crate::update_manifest::{ChangeElement, UpdateManifest, UpdateMode};
 
 #[get("/test")]
@@ -102,52 +103,48 @@ pub async fn update(req: HttpRequest) -> HttpResponse {
     );
 }
 
-#[get("/news")]
-pub async fn news() -> HttpResponse {
-    return get_news(None);
-}
-
-#[get("/news/{version}")]
-pub async fn version_news(req: HttpRequest) -> HttpResponse {
-    let input_version = req.match_info().get("version");
-    if input_version.is_some() {
-        let input_version = input_version.unwrap();
-        let parsed_version = Version::parse(input_version);
-        if parsed_version.is_err() {
-            return HttpResponse::BadRequest().body("Invalid version!");
-        }
+#[get("/file/{version}/{path:.*}")]
+pub async fn file(req: HttpRequest) -> HttpResponse {
+    let version = req.match_info().get("version");
+    if version.is_none() {
+        return HttpResponse::BadRequest().body("Version not specified!");
     }
-    let input_version = if input_version.is_some() { Some(Version::parse(input_version.unwrap()).unwrap()) } else { None };
-    return get_news(input_version);
-}
+    let version = version.unwrap();
 
-fn get_news(version: Option<Version>) -> HttpResponse {
-    let all_news = read_news_file();
-    if all_news.is_err() {
-        return all_news.unwrap_err();
+    let path = req.match_info().get("path");
+    if path.is_none() {
+        return HttpResponse::BadRequest().body("Path not specified!");
     }
-    let all_news = all_news.unwrap();
-    let mut news_string = String::new();
-    for n in all_news {
-        if n.version.is_some() {
-            if version.is_none() {
-                continue;
-            }
-            let requires = VersionReq::parse(n.version.unwrap().as_str());
-            if requires.is_err() {
-                continue;
-            }
-            if !requires.unwrap().matches(&version.clone().unwrap()) {
-                continue;
-            }
-        }
-        news_string = format!("{}\n{}", news_string, n.content);
+    let path = path.unwrap();
+    let path = decode(path);
+    if path.is_err() {
+        return HttpResponse::BadRequest()
+            .body(format!("Invalid file path!"));
+    }
+    let path = path.unwrap();
+    let path = path.replace("\\", "/");
+
+    let data_dir = crate::get_data_dir();
+
+    let mut file_string = format!("{}/{}/{}", data_dir.as_str(), version, path);
+    let mut file_path = Path::new(file_string.as_str());
+
+    if !file_path.is_file() {
+        file_string = format!("{}/latest/{}", data_dir.as_str(), path);
+        file_path = Path::new(file_string.as_str());
     }
 
-    if news_string.is_empty() {
-        return HttpResponse::NoContent().finish();
+    if !file_path.is_file() {
+        return HttpResponse::NotFound().body("File not found!");
     }
-    return HttpResponse::Ok().body(news_string);
+
+    let file_contents = fs::read(file_path);
+    if file_contents.is_err() {
+        return HttpResponse::InternalServerError().body("Unable to read file!");
+    }
+    let file_contents = file_contents.unwrap();
+
+    return HttpResponse::Ok().content_type(ContentType::octet_stream()).body(file_contents);
 }
 
 fn read_version_file() -> Result<Vec<UpdateManifest>, HttpResponse> {
@@ -169,24 +166,4 @@ fn read_version_file() -> Result<Vec<UpdateManifest>, HttpResponse> {
         return Err(HttpResponse::InternalServerError().body("Unable to parse versions file!"));
     }
     return Ok(versions.unwrap());
-}
-
-fn read_news_file() -> Result<Vec<News>, HttpResponse> {
-    let data_dir = crate::get_data_dir();
-    let news_file = format!("{}/news.json", data_dir.as_str());
-    let path = Path::new(news_file.as_str());
-    if !path.is_file() {
-        return Err(HttpResponse::InternalServerError().body("News file not found!"));
-    }
-    let news_contents = fs::read_to_string(path);
-    if news_contents.is_err() {
-        return Err(HttpResponse::InternalServerError().body("Unable to read news file!"));
-    }
-    let news_contents = news_contents.unwrap();
-
-    let news_content: Result<Vec<News>,_> = serde_json::from_str(news_contents.as_str());
-    if news_content.is_err() {
-        return Err(HttpResponse::InternalServerError().body("Unable to parse news file!"));
-    }
-    return Ok(news_content.unwrap());
 }
