# update-server/swagger.yaml
@@ -50,6 +50,46 @@ paths:
           content:
             string:
               example: 'Unable to read versions file!'
+  /file/{version}/{path}:
+    get:
+      tags:
+        - update
+      summary: Get a file for the given version
+      operationId: file
+      parameters:
+        - name: version
+          in: path
+          description: The version to update to
+          required: true
+          schema:
+            type: string
+        - name: path
+          in: path
+          description: The path of the file to update
+          required: true
+          schema:
+              type: string
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/octet-stream:
+              example: 0x48 0x65 0x6C 0x6C 0x6F 0x20 0x57 0x6F 0x72 0x6C 0x64 0x21
+        '400':
+          description: Invalid version
+          content:
+              string:
+                example: 'Invalid version!'
+        '404':
+          description: File not found
+          content:
+              string:
+                  example: 'File not found!'
+        '500':
+          description: Server error
+          content:
+              string:
+                  example: 'Unable to read file!'
   /news:
     get:
       tags:
